<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:fitsSystemWindows="true" tools:openDrawer="start">
    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar android:id="@+id/view_toolbar"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" >
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/appbar">
            <EditText
                android:id="@+id/input_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:singleLine="true"
                android:textSize="16sp"
                android:hint="@string/hint_hide_input"
                android:layout_toLeftOf="@+id/btn_add"/>

            <Button
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:text="@string/hide_add"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/btn_remove"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/btn_add"
                android:text="@string/hide_remove"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/text_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_remove"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/hide_msg"
                android:textSize="20sp"
                android:gravity="center"/>

            <ListView
                android:id="@+id/hide_listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/text_msg"
                android:choiceMode="multipleChoice"/>
        </RelativeLayout>


    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>