<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav_header_layout"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="#dadcda"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textSize="20sp"
        android:textColor="#212121"/>

    <RelativeLayout
        android:id="@+id/layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_title"
        android:layout_marginTop="8dp">
        <ImageView
            android:id="@+id/ico_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:src="@drawable/ico_id" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ico_id"
            android:layout_marginLeft="10dp"
            android:text="@string/nav_header_id"
            android:textSize="15sp"
            android:textColor="#212121"/>

        <TextView
            android:id="@+id/nav_header_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ico_id"
            android:layout_marginLeft="80dp"
            android:singleLine="true"
            android:textSize="15sp"
            android:textColor="#212121"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_id"
        android:layout_marginTop="8dp">
        <ImageView
            android:id="@+id/ico_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:src="@drawable/ico_msg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ico_msg"
            android:layout_marginLeft="10dp"
            android:text="@string/nav_header_msg"
            android:textSize="15sp"
            android:textColor="#212121"/>

        <TextView
            android:id="@+id/nav_header_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ico_msg"
            android:layout_marginLeft="80dp"
            android:singleLine="true"
            android:textSize="15sp"
            android:textColor="#212121"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_msg"
        android:layout_marginTop="8dp">
        <ImageView
            android:id="@+id/ico_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:src="@drawable/ico_coin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ico_point"
            android:layout_marginLeft="10dp"
            android:text="@string/nav_header_point"
            android:textSize="15sp"
            android:textColor="#212121"/>

        <TextView
            android:id="@+id/nav_header_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ico_point"
            android:layout_marginLeft="80dp"
            android:singleLine="true"
            android:textSize="15sp"
            android:textColor="#212121"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_nae"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_point"
        android:layout_marginTop="8dp">
        <ImageView
            android:id="@+id/ico_nae"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:src="@drawable/ico_coin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ico_nae"
            android:layout_marginLeft="10dp"
            android:text="@string/nav_header_nae"
            android:textSize="15sp"
            android:textColor="#212121"/>

        <TextView
            android:id="@+id/nav_header_nae"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ico_nae"
            android:layout_marginLeft="80dp"
            android:singleLine="true"
            android:textSize="15sp"
            android:textColor="#212121"/>
    </RelativeLayout>

</RelativeLayout>
