<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:fitsSystemWindows="true" tools:openDrawer="start">
    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar android:id="@+id/write_toolbar"
                android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" >
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/write_title"
                        android:textSize="20sp"
                        android:textColor="@android:color/white"
                        android:layout_marginLeft="5dp"/>

                    <Button
                        android:id="@+id/fileupload_btn"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_toLeftOf="@+id/write_btn"
                        android:layout_centerVertical="true"
                        android:textSize="20sp"
                        android:textColor="@drawable/btn_selector"
                        android:background="@drawable/btn_attachment"/>

                    <Button
                        android:id="@+id/write_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/complete"
                        android:textSize="20sp"
                        android:textColor="@drawable/btn_selector"
                        android:background="@android:color/transparent"/>
                </RelativeLayout>
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/appbar">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="제목"/>

                <EditText
                    android:id="@+id/title_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/attach_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title_txt"
                    android:layout_marginTop="12dp"
                    android:text="@string/write_attach"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/filename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:singleLine="true"
                    android:layout_below="@+id/title_txt"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/attach_txt"/>

                <TextView
                    android:id="@+id/content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/filename"
                    android:layout_marginTop="30dp"
                    android:textSize="20sp"
                    android:text="본문"/>

                <EditText
                    android:id="@+id/content_txt"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_below="@+id/content"
                    android:gravity="top|left"/>
            </RelativeLayout>
        </ScrollView>


    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>